trunk/Archive2/c6/061038ae686c33/output
main.cpp: In function ‘int main()’:
main.cpp:5:35: error: expected ‘}’ before ‘)’ token
    mymap.insert({50, {{0.1,false}});
                                   ^
